samples/_failures_safe/1761089926_9bc114_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c9b576b.c: In function ‘main’:
./samples/SAFE/__tmp_6c9b576b.c:175:25: error: expected ‘)’ at end of input
  175 |         free_matrix(mat2
      |                    ~    ^
      |                         )
./samples/SAFE/__tmp_6c9b576b.c:175:9: error: expected declaration or statement at end of input
  175 |         free_matrix(mat2
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_6c9b576b.c:175:9: error: expected declaration or statement at end of input
